syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Ticketing.API";

package TicketingService;

service TicketingGrpc {
    // Creates a ticket
    rpc CreateTicket(CreateTicketCommand) returns (TicketDTO) {}
}

// The request message containing ticket input information
message CreateTicketCommand {
    int32 customerId = 1;
    int32 seatId = 2;
}

// The response message containing ticket information
message TicketDTO {
    string ticketId = 1;
    google.protobuf.Timestamp createdOn = 2;
}